fix 100vh problem on mobile

--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -96,7 +96,7 @@ a {
     top: 99px;
     right: 100%;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #ffffff;  
     transition: right 0.4s;
   }
